--- a/src/styles.css
+++ b/src/styles.css
@@ -97,7 +97,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; } */
     }
 
     .main-banner {
-        height: 15vh !important;
+        /* height: 15vh !important; */
     }
 }
 
