--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -20,7 +20,7 @@
       <swiper-slide><img src="assets/slide7.png" alt=""></swiper-slide>
     </swiper-container> -->
 
-    <img src="assets/vs1.png" alt="" class="main-banner">
+    <img src="assets/main_poster.png" alt="" class="main-banner">
     
 
 
