Back to Img Slides R1.6

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -9,7 +9,7 @@
       <a (click)="goToShopPage()" class="btn">BOOK NOW</a>
     </div>
 
-    <!-- <swiper-container class="home-slider" effect="cards" loop="true" navigation="true" 
+    <swiper-container class="home-slider" effect="cards" loop="true" navigation="true" 
       autoplay="true" speed="500" pagination="true">
       <swiper-slide><img src="assets/slide1.png" alt=""></swiper-slide>
       <swiper-slide><img src="assets/slide2.png" alt=""></swiper-slide>
@@ -18,9 +18,9 @@
       <swiper-slide><img src="assets/slide5.png" alt=""></swiper-slide>
       <swiper-slide><img src="assets/slide6.png" alt=""></swiper-slide>
       <swiper-slide><img src="assets/slide7.png" alt=""></swiper-slide>
-    </swiper-container> -->
+    </swiper-container>
 
-    <img src="assets/main_poster.png" alt="" class="main-banner">
+    <!-- <img src="assets/main_poster.png" alt="" class="main-banner"> -->
     
 
 
