--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,33 +10,35 @@
       <a (click)="goToShopPage()" class="btn">BOOK NOW</a>
     </div>
 
-    <swiper-container class="home-slider" *ngIf="!isViewEdit" effect="cards" loop="true" navigation="true"
+    <swiper-container class="home-slider" *ngIf="!isViewEdit && bannerImageList.length" effect="cards" loop="true" navigation="true"
       autoplay="true" speed="500" pagination="true">
       <swiper-slide *ngFor="let images of bannerImageList">
-        <img [src]="images" alt="Apple">
+        <img *ngIf="bannerImageList.length" [src]="images" alt="Apple">
       </swiper-slide>
       <!-- <swiper-slide><img src="assets/slide2.png" alt="Apple"></swiper-slide> -->
       <!-- <swiper-slide *ngFor="let images of bannerImageList"><img src="assets/slide1.png" alt="Apple"></swiper-slide> -->
     </swiper-container>
 
     <div *ngIf="isViewEdit">
-      <div class="col-xs-12 col-sm-12 col-md-8 col-sm-offset-1 col-md-offset-2"></div>
-      <form class="banner-form">
-        <div class="form-group">
-          <label for="bannerImg">Image 1:</label>
-          <input type="text" id="bannerImg" name="bannerImg" [(ngModel)]="bannerImg[0]" class="form-control">
-        </div>
-        <div class="form-group">
-          <label for="bannerImg">Image 1:</label>
-          <input type="text" id="bannerImg" name="bannerImg" [(ngModel)]="bannerImg[1]" class="form-control">
-        </div>
-        <div class="form-group">
-          <label for="bannerImg">Image 1:</label>
-          <input type="text" id="bannerImg" name="bannerImg" [(ngModel)]="bannerImg[2]" class="form-control">
-        </div>
-        <br>
-        <button class="btn btn-primary" type="button" (click)="updateBannerImages()">Submit</button>
-      </form>
+      <div class="col-xs-12 col-sm-12 col-md-8 col-sm-offset-1 col-md-offset-2">
+        <form class="banner-form">
+          <div class="input-group">
+            <input type="file" (change)="onFileSelected($event)" class="form-control">
+            <button (click)="uploadFile()">Upload FIle</button>
+          </div>
+          <div class="form-group">
+            <label for="bannerImg">Image 1:</label>
+            <input type="text" id="bannerImg" name="bannerImg" [(ngModel)]="bannerImg[1]" class="form-control">
+          </div>
+          <div class="form-group">
+            <label for="bannerImg">Image 1:</label>
+            <input type="text" id="bannerImg" name="bannerImg" [(ngModel)]="bannerImg[2]" class="form-control">
+          </div>
+          <br>
+          <button class="btn btn-primary" type="button" (click)="updateBannerImages()">Submit</button>
+        </form>
+      </div>
+      
     </div>
 
     <!-- <img src="assets/main_poster.png" alt="" class="main-banner"> -->
