--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,348 +1,86 @@
-.heading{
-    text-align: center;
-    padding-bottom: 2rem;
-    color: #fff;
-    text-transform: uppercase;
-    font-size: 4rem;
-}
+/* .content-container {
+    min-height: 100vh;
+    box-sizing: border-box;
+    padding: 25px;
+  }
 
-.heading span{
-    /*color:var(--main-color);*/
-    color: #FDFBFB;
-    text-transform: uppercase;
-}
+  mat-sidenav[style] {
+    visibility: visible !important;
+  }
+  .mat-drawer {
+    transform: none !important;
+  } */
 
-section{
-    padding:2rem 9%;
-}
-
-.home .content{
-    text-align: center;
-    /* padding-top: 6rem; */
-    margin: 2rem auto;
-    max-width: 70rem;
-}
-
-.home .content h3{
-    color: #fff;
-    font-size: 4.5rem;
-    text-transform: uppercase;
-}
-
-.home .content h3 span{
-    /*color:var(--main-color);*/
-    color: #faf9f5;
-    text-transform: uppercase;
-
-
-}
-
-.home .home-slider swiper-slide{
-    overflow: hidden;
-    border-radius: .5rem;
-    height: 50rem;
-    width: 35rem;
-}
-
-.home .home-slider swiper-slide img{
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-}
-
-.main-banner {
-    /* height: 45vh;  */
-    width: 100%;
-}
-
-.service .box-container{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(27rem, 1fr));
-    gap:1.5rem;
-}
-
-.service .box-container .box{
-    /* border-radius: .5rem; */
-    background: #040202 ;
-    text-align: center;
-    /* padding: 2.5rem; */
-}
-
-.service .box-container .box i{
-
-    height: 6rem;
-    width: 6rem;
-    line-height: 6rem;
-    border-radius: 50%;
-    font-size: 2.5rem;
-    /*background:var(--main-color);*/
-    background: #DAC709;
-    color: #000000;
-}
-
-.service .box-container .box h3{
-    font-size: 2rem;
-    color: #fff;
-    padding: 1rem 0;
-}
-
-.service .box-container .box p{
-    font-size: 1.4rem;
-    color: #eee;
-    line-height: 1.8;
-}
-
-.about .row{
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    gap: 1.5rem;
-}
-
-.about .row .image{
-    flex: 1 1 45rem;
-    padding: 1rem;
-
-}
-
-.about .row .image img{
-    width: 100%;
-    border-radius: .5rem;
-    border: 1rem solid #333;
-    
-}
-
-.about .row .content{
-    flex: 1 1 45rem;
-    padding: 1rem;
-}
-
-.about .row .content h3{
-    font-size: 3.5rem;
-    color: #fff;
-}
-
-.about .row .content p{
-    font-size: 1.5rem;
-    color: #fff;
-    padding: 1rem 0;
-    line-height: 2;
-}
-
-.gallery .box-container{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(27rem, 1fr));
-    gap: 1.5rem;
-}
-
-.gallery .box-container .box{
-
-    position: relative;
-    border: 1rem solid #333;
-    border-radius: .5rem;
-    height: 25rem;
-    cursor: pointer;
-    overflow: hidden;
-}
-
-.gallery .box-container .box img{
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-}
-
-.gallery .box-container .box:hover img{
-    transform: scale(1.1);
-    filter: grayscale();
-}
-
-.gallery .box-container .box .title{
+/* .example-container {
     position: absolute;
-    top: -10rem; left: 0; right: 0;
-    background: #333;
-    color: #fff;
-    text-align: center;
-    padding-bottom: 1rem;
-    font-size: 2rem;
-}
-
-.gallery .box-container .box:hover .title{
-    top: 0;
-}
-
-.gallery .box-container .box .icons{
-    position: absolute;
-    bottom: -10rem; left: 0; right: 0;
-    background: #333;
-    padding-top: 1rem;
-    text-align: center;
-}
-
-.gallery .box-container .box:hover .icons{
+    top: 100px;
     bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgb(155, 184, 26);
+} */
 
+h1 {
+    padding: 0 1rem;
 }
 
-.gallery .box-container .box .icons a{
-    font-size: 2rem;
-    margin: .5rem 1rem;
-    color: #fff;
+h2 {padding: 1rem;}
+
+.dashboard-toolbar {
+    top: 50px;
+    position: fixed;
+    z-index: 2;
 }
 
-.gallery .box-container .box .icons a:hover{
-    color: var(--main-color);
+mat-sidenav-container {
+    height:100%;
 }
 
-.price .box-container{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
-    gap: 1.5rem;
+.expanded {
+    width: 250px;   
 }
 
-.price .box-container .box{
-    padding: 2rem 0;
-    background: #000000;
-    border-radius: .5rem;
-    text-align: center;
+.nav-btn {
+    width: 100%;
+    font-size: medium;
+    margin-bottom: 10px;
 }
 
-.price .box-container .box:hover{
-    transform: scale(1.03);
-}
+/* Move the content down so that it won't be hidden by the toolbar */
+mat-sidenav {
+    padding-top: 6.5rem;
+    @media screen and (min-width: 600px) {
+      padding-top: 4rem;
+    }
 
-.price .box-container .box .title{
-    background: var(--main-color);
-    color: #fff;
-    padding: 1.5rem 0;
-    font-size: 2rem;
-}
-
-.price .box-container .box .amount{
-    color: #fff;
-    padding-top: 2rem;
-    font-size: 2rem;
-}
-
-.price .box-container .box ul{
-    list-style-type: none;
-    padding: 1rem 0;
-}
-
-.price .box-container .box ul li{
-    font-size: 1.5rem;
-    color: #eee;
-    padding: 1rem 0;
-}
-
-.price .box-container .box ul li i{
-    color: var(--main-color);
-    padding-right: .5rem;
-}
-
-
-.review .box{
-    border-radius: .5rem;
-    background: #000000;
-    padding: 2rem;
-    position: relative;
-}
-
-.review .box .fa-quote-right{
-    position: absolute;
-    top: 2rem; right: 2rem;
-    color: var(--main-color);
-    font-size: 5rem;
-}
-
-.review .box .user{
-    display: flex;
-    align-items: center;
-    gap: 1.5rem;
-    padding-bottom: 1rem;
-}
-
-.review .box .user img{
-    height: 7rem;
-    width: 7rem;
-    border-radius: 50%;
-    object-fit: cover;
-}
-
-.review .box .user h3{
-    font-size: 2rem;
-    color: #fff;
-}
-
-.review .box .user span{
-    font-size: 1.5rem;
-    color: #eee;
-}
-
-.review .box p{
-    line-height: 2;
-    color: #eee;
-    padding:.5rem 0;
-    font-size: 1.6rem;
-}
-
-
-.footer{
-    background: #111;
-}
-
-.footer .box-container{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
-    gap: 1.5rem;
-}
-
-.footer .box-container .box h3{
-    font-size: 2.5rem;
-    padding: 1rem 0;
-    color: #fff;
-}
-
-.footer .box-container .box a{
-    display: block;
-    font-size: 1.5rem;
-    padding: 1rem 0;
-    color: #eee;
-}
-
-.footer .box-container .box a i{
-    padding-right: .5rem;
-    color: var(--main-color);
-}
-
-.footer .box-container .box a:hover i{
-    padding-right: 1.5rem;
-    color: #fff;
-}
-
-.footer .credit{
-    text-align: center;
-    border-top: .1rem solid #222;
-    color: #fff;
-    padding: 2rem;
-    margin-top: 1rem;
-    font-size: 2rem;
-}
-
-.footer .credit span{
-    color: var(--main-color);
-}
-
-
-/* ============================================================================================ */
-
-.carousel-item {
-    text-align: center;
+    .entry{
+        display: flex;
+        align-items: center;
+        gap: 1rem;
+        padding:0.75rem;
+    }
   }
-  
-  .testimonial {
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    margin: 20px;
+
+/* Move the content down so that it won't be hidden by the toolbar */
+mat-sidenav-content{
+    padding-top: 3.5rem;
+    padding-left: 3.5rem;
+    overflow: auto;
+    height: 100vh;
+
+    @media screen and (min-width: 601px) {
+        padding-top: 4rem;
+        /* background-color: blue; */
+    }
+
+    @media screen and (max-width: 600px) {
+        padding-top: 10rem;        
+        padding-left: 1.5rem;
+        /* background-color: red; */
+    }
+}
+
+mat-list-item a.active {
+    font-weight: bold !important;
+    color: blue !important;
   }
-  
