--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,17 +1,34 @@
-<!-- <p style="color:#fff">dashboard works!</p>
-<p>Welcome {{user.name}} {{user.bookingId}}</p> -->
-<div class="row">
-  <div class="col-lg-2">
-    <section class="home" id="home">
-      <div class="content">
-        <h3>the community you didn't know <span> you needed </span></h3>
-        <a (click)="goToShopPage()" class="btn">BOOK NOW</a>
-      </div>
-    </section>
-  </div> 
 
-  <div class="col-lg-10">
-    <router-outlet></router-outlet>
-  </div>
+<div class="row">
+  <mat-toolbar class="dashboard-toolbar">
+    <button mat-icon-button aria-label="Menu icon" (click)="toggleMenu()">
+      <mat-icon>menu</mat-icon>
+    </button>
+    <h1>{{ childTitle }}</h1>
+  </mat-toolbar>
+
+  <mat-sidenav-container class="sidenav-container">
+    <mat-sidenav class="sideNavBar" [ngClass]="!isCollapsed ? 'expanded' : ''" [mode]="isMobile ? 'over' : 'side'" [opened]="isMobile ? 'false' : 'true'">
+      <!-- <a class="nav-btn" mat-button [routerLink]="['/dashboard/home-edit']">Images</a>
+      <a class="nav-btn" mat-button [routerLink]="['/dashboard/register']">Register</a> -->
+      <mat-nav-list>
+        <a mat-list-item [routerLink]="['home-edit']" routerLinkActive="active">
+          <span class="entry">
+            <mat-icon>image</mat-icon>
+            <span *ngIf="!isCollapsed">Images</span>
+          </span>
+        </a>
   
+        <a mat-list-item [routerLink]="['register']" routerLinkActive="active">
+          <span class="entry">
+            <mat-icon>create</mat-icon>
+            <span *ngIf="!isCollapsed">Register</span>
+          </span>
+        </a>
+      </mat-nav-list>
+    </mat-sidenav>
+    <mat-sidenav-content>
+      <router-outlet  (activate)="onActivate($event)"></router-outlet>
+    </mat-sidenav-content>
+  </mat-sidenav-container>
 </div>
