--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,46 +4,60 @@
 
 <div class="row col-lg-12">
   <!-- <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-sm-offset-1 col-md-offset-2"> -->
-  <section class="home" id="home">
+  <section class="home" id="home" *ngIf="!isViewEdit">
     <div class="content">
       <h3>the community you didn't know <span> you needed </span></h3>
       <a (click)="goToShopPage()" class="btn">BOOK NOW</a>
     </div>
 
-    <swiper-container class="home-slider" *ngIf="!isViewEdit && bannerImageList.length" effect="cards" loop="true" navigation="true"
+    <swiper-container class="home-slider" *ngIf="mainSlideImageList.length" effect="cards" loop="true" navigation="true"
       autoplay="true" speed="500" pagination="true">
-      <swiper-slide *ngFor="let images of bannerImageList">
-        <img *ngIf="bannerImageList.length" [src]="images" alt="Apple">
+      <swiper-slide *ngFor="let images of mainSlideImageList">
+        <img *ngIf="mainSlideImageList.length" [src]="images" alt="Apple">
       </swiper-slide>
       <!-- <swiper-slide><img src="assets/slide2.png" alt="Apple"></swiper-slide> -->
-      <!-- <swiper-slide *ngFor="let images of bannerImageList"><img src="assets/slide1.png" alt="Apple"></swiper-slide> -->
+      <!-- <swiper-slide *ngFor="let images of mainSlideImageList"><img src="assets/slide1.png" alt="Apple"></swiper-slide> -->
     </swiper-container>
 
-    <div *ngIf="isViewEdit">
-      <div class="col-xs-12 col-sm-12 col-md-8 col-sm-offset-1 col-md-offset-2">
-        <form class="banner-form">
-          <div class="input-group">
-            <input type="file" (change)="onFileSelected($event)" class="form-control">
-            <button (click)="uploadFile()">Upload FIle</button>
-          </div>
-          <div class="form-group">
-            <label for="bannerImg">Image 1:</label>
-            <input type="text" id="bannerImg" name="bannerImg" [(ngModel)]="bannerImg[1]" class="form-control">
-          </div>
-          <div class="form-group">
-            <label for="bannerImg">Image 1:</label>
-            <input type="text" id="bannerImg" name="bannerImg" [(ngModel)]="bannerImg[2]" class="form-control">
-          </div>
-          <br>
-          <button class="btn btn-primary" type="button" (click)="updateBannerImages()">Submit</button>
-        </form>
-      </div>
-      
-    </div>
-
-    <!-- <img src="assets/main_poster.png" alt="" class="main-banner"> -->
-    <button class="btn btn-primary home-edit" type="submit" (click)="editBannerOnClick()">Edit</button>
+    <!-- <img src="assets/main_poster.png" alt="" class="main-banner"> -->    
   </section>
+  <button class="btn btn-primary home-edit" type="submit" *ngIf="currentRoute == 'home-edit'" (click)="editBannerOnClick()">Edit</button>
+
+  <div *ngIf="isViewEdit" class="col-lg-12 col-md-12 col-xs-12"> <!-- isViewEdit -->
+    <div class="banner-form">
+      <div class="row col-12 mb-5" *ngFor="let bannerImage of bannerImgObjList; let i = index">
+        <div class="col-auto">
+          <label>File:</label>
+          <input type="file" *ngIf="!bannerImage.imageFile" (change)="onFileSelected($event, bannerImage, i)" class="form-control">          
+        </div>
+        <div class="col-auto">
+          <label>Name:</label>
+          <input type="text" [(ngModel)]="bannerImage.name" class="form-control">
+        </div>
+        <div class="col-auto">
+          <label>Description:</label>
+          <input type="text" [(ngModel)]="bannerImage.description" class="form-control">
+        </div>
+        <div class="col-auto">
+          <label>Image Tag:</label>
+          <select [(ngModel)]="bannerImage.imgTag" class="form-control">
+            <option value="" disabled>Select Image Tag</option>
+            <option value="mainSlideImage">Main Slide Image</option>
+            <option value="shopBannerImage">Shop Banner Image</option>
+          </select>
+        </div>
+
+        <div class="col-auto">
+          <button class="btn btn-danger" (click)="deleteImage(bannerImage, i)">Delete</button>
+        </div>
+        <div class="col-auto">
+          <button class="btn btn-success" (click)="uploadImage(bannerImage)">Upload</button>
+        </div>
+      </div>
+      <br>
+      <button class="btn btn-primary" type="button" (click)="addNewImageSpace()">Add New Image</button>
+    </div>
+  </div>
 
   <!-- </div> -->
 
