--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -4,7 +4,7 @@
         <!-- <div class="banner-container">
 
             </div> -->
-        <img src="assets/coming_soon_banner.png" alt="">
+        <img [src]="shopBannerImageUrl" alt="">
     </div>
 
     <div class="row col-lg-12">
