--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -21,7 +21,7 @@
 
     <!-- <img src="assets/main_poster.png" alt="" class="main-banner"> -->    
   </section>
-  <button class="btn btn-primary home-edit" type="submit" *ngIf="currentRoute == 'home-edit'" (click)="editBannerOnClick()">Edit</button>
+  <button class="btn btn-primary home-edit" type="submit" *ngIf="currentRoute == 'imageboard'" (click)="editBannerOnClick()">Edit</button>
 
   <div *ngIf="isViewEdit" class="col-lg-12 col-md-12 col-xs-12"> <!-- isViewEdit -->
     <div class="banner-form">
