--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -12,7 +12,7 @@
       <!-- <a class="nav-btn" mat-button [routerLink]="['/dashboard/home-edit']">Images</a>
       <a class="nav-btn" mat-button [routerLink]="['/dashboard/register']">Register</a> -->
       <mat-nav-list>
-        <a mat-list-item [routerLink]="['home-edit']" routerLinkActive="active">
+        <a mat-list-item [routerLink]="['imageboard']" routerLinkActive="active">
           <span class="entry">
             <mat-icon>image</mat-icon>
             <span *ngIf="!isCollapsed">Images</span>
