Added Events Creation Comp

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -19,10 +19,17 @@
           </span>
         </a>
   
+        <a mat-list-item [routerLink]="['events']" routerLinkActive="active">
+          <span class="entry">
+            <mat-icon>event</mat-icon>
+            <span *ngIf="!isCollapsed">Events</span>
+          </span>
+        </a>
+
         <a mat-list-item [routerLink]="['register']" routerLinkActive="active">
           <span class="entry">
-            <mat-icon>create</mat-icon>
-            <span *ngIf="!isCollapsed">Register</span>
+            <mat-icon>receipt</mat-icon>
+            <span *ngIf="!isCollapsed">Products</span>
           </span>
         </a>
       </mat-nav-list>
