--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -24,20 +24,24 @@ h1 {
     padding: 0 1rem;
 }
 
-h2 {padding: 1rem;}
+h2 {
+    padding: 1rem;
+}
 
 .dashboard-toolbar {
     top: 50px;
     position: fixed;
     z-index: 2;
+    background: #000 !important;
 }
 
 mat-sidenav-container {
-    height:100%;
+    height: 100%;
+    background-color: #000;
 }
 
 .expanded {
-    width: 250px;   
+    width: 250px;
 }
 
 .nav-btn {
@@ -49,20 +53,25 @@ mat-sidenav-container {
 /* Move the content down so that it won't be hidden by the toolbar */
 mat-sidenav {
     padding-top: 6.5rem;
+
     @media screen and (min-width: 600px) {
-      padding-top: 4rem;
+        padding-top: 4rem;
     }
 
-    .entry{
+    .entry {
         display: flex;
         align-items: center;
         gap: 1rem;
-        padding:0.75rem;
+        padding: 0.75rem;
     }
-  }
+}
+
+.sideNavBar {
+    background-color: #000;
+}
 
 /* Move the content down so that it won't be hidden by the toolbar */
-mat-sidenav-content{
+mat-sidenav-content {
     padding-top: 3.5rem;
     padding-left: 3.5rem;
     overflow: auto;
@@ -74,7 +83,7 @@ mat-sidenav-content{
     }
 
     @media screen and (max-width: 600px) {
-        padding-top: 10rem;        
+        padding-top: 10rem;
         padding-left: 1.5rem;
         /* background-color: red; */
     }
@@ -83,4 +92,4 @@ mat-sidenav-content{
 mat-list-item a.active {
     font-weight: bold !important;
     color: blue !important;
-  }
+}
