--- a/src/app/dashboard/registration/registration.component.css
+++ b/src/app/dashboard/registration/registration.component.css
@@ -25,12 +25,45 @@ input.ng-invalid.ng-touched {
     font-size: medium;
 }
 
+.button-container {
+    margin-left: 10px;
+    /* Space between the input and the button */
+    display: flex;
+    justify-content: flex-end;
+    /* Align button to the right */
+}
+
+.filter-btn {
+    margin-left: 10px;
+}
+
+
 .product-card {
     max-width: 100%;
     margin-bottom: 10px;
     margin-right:10px;
     border: 3px solid orange;
     border-radius: 10px;
+    position: relative; /* Ensure child elements like background can be positioned */
+    overflow: hidden;   /* Clip any overflowing background */
+}
+
+mat-card-header, mat-card-content, mat-card-actions {
+    position: relative; /* Ensure content stays above the background */
+    z-index: 1;        /* Bring content to the front */
+    color: #fff;       /* Ensure text color contrasts the background */
+}
+
+.card-background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 0; /* Place the background behind the content */
+    background-size: cover;
+    background-position: center;
+    opacity: 0.4; /* Adjust the opacity to make text readable */
 }
   
 .product-header-image {
