--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,16 +7,27 @@
   <section class="home" id="home" *ngIf="!isViewEdit">
     <div class="content">
       <h3>the community you didn't know <span> you needed </span></h3>
-      <a (click)="goToShopPage()" class="btn">BOOK NOW</a>
+      <a (click)="goToShopPage()" class="btn">BOOK YOUR TICKETS</a>
     </div>
 
-    <swiper-container class="home-slider" *ngIf="mainSlideImageList.length" effect="cards" loop="true" navigation="true"
+    <!-- <swiper-container class="home-slider" *ngIf="mainSlideImageList.length" effect="cards" loop="true" navigation="true"
       autoplay="true" speed="500" pagination="true">
       <swiper-slide *ngFor="let images of mainSlideImageList">
         <img *ngIf="mainSlideImageList.length" [src]="images" alt="Apple">
       </swiper-slide>
-      <!-- <swiper-slide><img src="assets/slide2.png" alt="Apple"></swiper-slide> -->
-      <!-- <swiper-slide *ngFor="let images of mainSlideImageList"><img src="assets/slide1.png" alt="Apple"></swiper-slide> -->
+      //<swiper-slide><img src="assets/slide2.png" alt="Apple"></swiper-slide>
+      //<swiper-slide *ngFor="let images of mainSlideImageList"><img src="assets/slide1.png" alt="Apple"></swiper-slide>
+    </swiper-container> -->
+
+    <swiper-container class="home-slider" effect="cards" loop="true" navigation="true" 
+      autoplay="true" speed="500" pagination="true">
+      <swiper-slide><img src="assets/slide1.png" alt=""></swiper-slide>
+      <swiper-slide><img src="assets/slide2.png" alt=""></swiper-slide>
+      <swiper-slide><img src="assets/slide3.png" alt=""></swiper-slide>
+      <swiper-slide><img src="assets/slide4.png" alt=""></swiper-slide>
+      <swiper-slide><img src="assets/slide5.png" alt=""></swiper-slide>
+      <swiper-slide><img src="assets/slide6.png" alt=""></swiper-slide>
+      <swiper-slide><img src="assets/slide7.png" alt=""></swiper-slide>
     </swiper-container>
 
     <!-- <img src="assets/main_poster.png" alt="" class="main-banner"> -->    
@@ -63,11 +74,10 @@
 
   <!-- service section start -->
   <!-- <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-sm-offset-1 col-md-offset-2"> -->
-  <section class="service" id="service">
+  <!-- <section class="service" id="service">
     <h1 class="heading"> our <span>services</span></h1>
     <div class="box-container">
       <div class="box ">
-        <!-- <i class="fa fa-map-marker-alt"></i> -->
         <h3>BOOK A SHOW</h3>
         <p>From corporate events to festivals,colleges and private parties, our talented musicians
           bring energy and passion to every performance. Contact Us for an unforgettable live music entertainment and
@@ -77,7 +87,6 @@
       </div>
 
       <div class="box">
-        <!-- <i class="fa fa-envelope"></i> -->
         <h3>JOIN THE TEAM</h3>
         <p>Join and work with our core team, organize events, gain valuable experience and exposure !!</p>
         <a href="https://docs.google.com/forms/d/1DwngPs53SvmDRMl_rv0iftxeq0RF-6rIndvL82IVt10/viewform?edit_requested=true"
@@ -85,23 +94,14 @@
       </div>
 
       <div class="box">
-        <!-- <i class="fa fa-music"></i> -->
         <h3>UPCOMING EVENTS</h3>
         <p>MSO curating the best of all till date.Tenting, movie night, workshops and more on June 15 at Hamsah
           Organic
           Farm . Book your slots now </p>
         <a href="https://rzp.io/l/PsGzNu6" class="btn">BOOK NOW</a>
       </div>
-
-      <!-- <div class="box"> -->
-      <!-- <i class="fa fa-utensils"></i> -->
-      <!-- <h3>MEET THE TEAM</h3>
-          <p>Meet our team, a vibrant mix of musicians, organizers, and creators, here to carefully curate a beautiful community experience !! </p>
-      </div> -->
-
     </div>
-
-  </section>
+  </section> -->
   <!-- </div> -->
   <!-- service section end -->
 
