--- a/src/app/shop/shop.component.css
+++ b/src/app/shop/shop.component.css
@@ -7,6 +7,7 @@
     background-repeat: no-repeat;
 } */
 
+
 .banner-container {
     width: 100%;
     height: 150px; /* Set the desired height of your banner */
@@ -203,4 +204,19 @@ mat-card-actions input {
 
 #download {
     display: none;
+}
+
+.spinner-container {
+    display: flex;
+    flex-direction: column; /* Stack the spinner and label vertically */
+    justify-content: center;
+    align-items: center;
+    width: 100%;  /* Ensure it spans the full width */
+}
+
+.loading-label {
+    margin-top: 10px; /* Space between the spinner and the label */
+    color: white; /* Make the font color white */
+    font-size: 16px; /* Adjust the font size if needed */
+    text-align: center; /* Center-align the text */
 }
