--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -32,6 +32,14 @@
             <span *ngIf="!isCollapsed">Products</span>
           </span>
         </a>
+
+        <a mat-list-item [routerLink]="['transcations']" routerLinkActive="active">
+          <span class="entry">
+            <mat-icon>sync_problem</mat-icon>
+            <span *ngIf="!isCollapsed">Transactions</span>
+          </span>
+        </a>
+
       </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content>
