--- a/src/app/shop/shop.component.css
+++ b/src/app/shop/shop.component.css
@@ -220,3 +220,12 @@ mat-card-actions input {
     font-size: 16px; /* Adjust the font size if needed */
     text-align: center; /* Center-align the text */
 }
+
+.sold-out {
+    padding: 5px;
+    font-size: small;
+    font-weight: bold;
+    color:red;
+    border: 2px solid red;
+    border-radius: 5px;
+}
