--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -33,7 +33,7 @@
                             <mat-card-content>
                                 <p>{{product.description}}</p>
                             </mat-card-content>
-                            <mat-card-actions align="end">
+                            <mat-card-actions align="end" *ngIf="product.active">
                                 <div class="add-button-container">
                                     <button mat-mini-fab (click)="removeProductFromCart(product)" color="accent"
                                         aria-label="Example icon button with a plus one icon"
@@ -48,6 +48,12 @@
                                         <mat-icon>adds</mat-icon>
                                     </button>
                                 </div>
+                            </mat-card-actions>
+                            <mat-card-actions align="end" *ngIf="!product.active">
+                                <div class="sold-out">
+                                    <span> SOLD OUT</span>
+                                </div>
+                                
                             </mat-card-actions>
                         </div>
                     </mat-card>
